ggplot2 0.9.3.99
----------------------------------------------------------------

BUG FIXES

* The theme element `legend.box.just` now can be set. It was not properly
  recognized before.

ggplot2 0.9.3
----------------------------------------------------------------

* The `plotmatrix` function has been deprecated and prints a warning
  message.

* `stat_bin` now produces warning messages when it is used with set or
  mapped y values. Previously, it was possible to use `stat_bin` and
  also set/map y values; if there was one y value per group, it would
  display the y values from the data, instead of the counts of cases for
  each group. This usage is deprecated and will be removed in a future
  version of ggplot2. (Winston Chang. Fixes #632)

* Several small changes were made so that ggplot2 is compatible with
  plyr <= 1.7.1 as well as plyr > 1.7.1.

* `geom_polygon` draws multiple polygons as a single grob instead of as
  separate grobs. This results in much better performance. For example,
  drawing a world map is about 12 times faster. (Winston Chang. Fixes #666)

MINOR FEATURES

* A new theme `theme_minimal` has been added. This theme is based on
  `theme_bw`, but does not have outlines around many of the rectangular
  elements. (Baptiste Auguie)

* A new theme `theme_classic` has been added. This theme has is based on
  `theme_bw`. It has x and y axis lines, but no box around the plotting area
  and no grid lines. (Thanks to David Kahle)

* `geom_segment` allows setting `lineend`. (Jean-Olivier Irisson)

* `ggsave` raises an error when making images larger than 50x50 inches.
  This prevents accidentally creating extremely large bitmap images that
  hang R and eat up memory. (Winston Chang. Fixes #517)

* `train_cartesian` and `train_trans` are no longer memoized. Previously
  the results of these functions were saved and so they would not
  respond changes in the operating environment, such as a change in
  locale. (Winston Chang. Fixes #592)
