@@ -205,3 +205,4 @@ Collate:
     'translate-qplot-lattice.r'
     'annotation-logticks.r'
     'utilities-help.r'
+    'remove-geom.R'
