@@ -289,6 +289,7 @@ export(position_stack)
 export(qplot)
 export(quickplot)
 export(rel)
+export(remove_geom)
 export(resolution)
 export(scale_alpha)
 export(scale_alpha_continuous)
